--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,18 @@ test-output/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+*.class
+*.log
+*.jar
+*.war
+*.ear
+*.swp
+*.swo
+*.~lock.*
 
 ### IntelliJ IDEA ###
+.idea/
+/*.iml
 .idea/shelf
 .idea/modules.xml
 .idea/jarRepositories.xml
@@ -42,3 +52,22 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+### Test Report and Temp Files ###
+/reports/
+/allure-results/
+/allure-report/
+*.tmp
+*.bak
+*.old
+
+# Cucumber
+/cucumber-html-reports/
+/cucumber.json
+/cucumber-reports/
+
+# Selenium
+/screenshots/
+
+# Log4j log files
+/logs/
