--- a/configuration.properties
+++ b/configuration.properties
@@ -4,6 +4,10 @@ HLurl = https://qa.heallifehospital.com/
 HLuserUrl = https://qa.heallifehospital.com/site/userlogin
 HLadminUrl = https://qa.heallifehospital.com/site/login
 
+ContactUsUrl=https://qa.heallifehospital.com/page/contact-us#map
+AdminDasboardUrl=https://qa.heallifehospital.com/admin/admin/dashboard
+ForgotPasswordUrl=https://qa.heallifehospital.com/site/forgotpassword
+
 Passwords = o6*d@fko3PXL1
 
 HLusername = pat78
