onur/pharmacy_eksik

--- a/configuration.properties
+++ b/configuration.properties
@@ -220,3 +220,6 @@ NurseMailUgur = ugur.nurse@heallifehospital.com
 NurseMailUygar = uygar.nurse@heallifehospital.com
 NurseMailUmit = umit.nurse@heallifehospital.com
 NurseMailXaver = xaver.nurse@heallifehospital.com
+
+onurPatName = pat70
+onurPatPass = g5acp3
