--- a/configuration.properties
+++ b/configuration.properties
@@ -7,6 +7,7 @@ HLadminUrl = https://qa.heallifehospital.com/site/login
 ContactUsUrl=https://qa.heallifehospital.com/page/contact-us#map
 AdminDasboardUrl=https://qa.heallifehospital.com/admin/admin/dashboard
 ForgotPasswordUrl=https://qa.heallifehospital.com/site/forgotpassword
+AdminAppoinmentUrl=https://qa.heallifehospital.com/admin/appointment/index
 
 Passwords = o6*d@fko3PXL1
 
