--- a/configuration.properties
+++ b/configuration.properties
@@ -223,3 +223,11 @@ NurseMailXaver = xaver.nurse@heallifehospital.com
 
 onurPatName = pat70
 onurPatPass = g5acp3
+
+!NavbarLinks
+HomeButtonUrl = https://qa.heallifehospital.com/page/heal-life-hospital-research-center
+AppointmentButtonUrl = https://qa.heallifehospital.com/form/appointment
+!eventsButtonUrl = N/A
+AboutUsButtonUrl = https://qa.heallifehospital.com/#
+GalleryButtonUrl = https://qa.heallifehospital.com/page/gallery
+ContactUsButtonUrl = https://qa.heallifehospital.com/page/contact-us
