--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <!-- <compilerArgs> --> <!--enable-preview</compilerArgs> -->
                 </configuration>
             </plugin>
 
