--- a/configuration.properties
+++ b/configuration.properties
@@ -8,7 +8,8 @@ ContactUsUrl=https://qa.heallifehospital.com/page/contact-us#map
 AdminDasboardUrl=https://qa.heallifehospital.com/admin/admin/dashboard
 ForgotPasswordUrl=https://qa.heallifehospital.com/site/forgotpassword
 AdminAppoinmentUrl=https://qa.heallifehospital.com/admin/appointment/index
-
+DoctorWiseUrl=https://qa.heallifehospital.com/admin/onlineappointment/patientschedule
+QueueUrl=https://qa.heallifehospital.com/admin/onlineappointment/patientqueue
 Passwords = o6*d@fko3PXL1
 
 HLusername = pat78
