--- a/configuration.properties
+++ b/configuration.properties
@@ -9,6 +9,7 @@ AdminDasboardUrl=https://qa.heallifehospital.com/admin/admin/dashboard
 ForgotPasswordUrl=https://qa.heallifehospital.com/site/forgotpassword
 
 Passwords = o6*d@fko3PXL1
+allure.results.directory=target/allure-results
 
 HLusername = pat78
 HLpassword = 9296kw
