--- a/configuration.properties
+++ b/configuration.properties
@@ -233,3 +233,11 @@ AppointmentButtonUrl = https://qa.heallifehospital.com/form/appointment
 AboutUsButtonUrl = https://qa.heallifehospital.com/#
 GalleryButtonUrl = https://qa.heallifehospital.com/page/gallery
 ContactUsButtonUrl = https://qa.heallifehospital.com/page/contact-us
+
+Namegulnar = gulnar
+Emailgulnar =gulnar_jbr@hotmail.com
+subject= bilgilendirme
+Description= randevu ayarlarını düzenlenmesi
+
+gulnarPatName=pat116
+gulnarPatPass =4bwui5
